#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-37
2015-08-07 David Schneider
- run unit tests in subdirectory based on SIT_ARCH so that buildbot can run
  tests in parallel on different platforms.

Tag: V00-02-36
2015-07-28 David Schneider
- fix bug with in the Translation of vlen ndarrays (JIRA PSAS-170)
  reenable unit tests.

Tag: V00-02-35
2015-07-28 David Schneider
- temporarily disable unit tests for rhel7 (JIRA PSRT-63)

Tag: V00-02-34
2015-07-27 Igor Gaponenko
- fixed a bug in using the static_cast (JIRA PSRT-63)

Tag: V00-02-33
2015-7-8 David Schneider
- add option exclude_config_eventdata to address JIRA PSAS-167	

Tag: V00-02-32
2015-6-26 David Schneider
- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166

Tag: V00-02-31
2015-6-2 David Schneider
- add full event key filter, opent eventkey_filter. JIRA PSAS-155

Tag: V00-02-30
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-02-29
- fix bug with controlling ndarray chunking: JIRA PSAS-137
  save 'class' of type in writer map. use this to lookup which dataset
  creation properties to use.

Tag: V00-02-28
- add parameter useControlData to get chunking control.
- added unit test for chunking. Still have bug for controlling ndarray
  chunking separately: JIRA PSAS-137

Tag: V00-02-27
- add std: to use of type_info in header, JIRA PSAS-127

Tag: V00-02-26
- extend reporting on unused parameters to cover chunk parameters
	
Tag: V00-02-25
- add diagnostic about how long fastindex search for other stream calib
  cycles takes.
- attempt to make fastindex a little faster by decreasing block size while